--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,18 +1,71 @@
-@misc{rfc4627,
-  author="D. Crockford and JSON.org",
-  title="{The application/json Media Type for JavaScript Object Notation (JSON)}",
+@online{econotag,
+  author = {Redwire, LLC},
+  title = {Econotag: mc13224v development board with on-board debugging},
+  month = may,
+  year = {2013},
+  url = {http://www.redwirellc.com/store/node/1}
+}
+
+@online{mc1322x,
+  author = {Freescale Semiconductor},
+  title = {MC1322x - Advanced ZigBee™ - Compliant Platform-in-Package (PiP) for the 2.4 GHz IEEE® 802.15.4 Standard},
+  month = may,
+  year = {2013},
+  url = {http://www.freescale.com/files/rf_if/doc/data_sheet/MC1322x.pdf}
+}
+
+@online{contiki,
+  author = {Contiki-Community},
+  title = {Contiki - The Open Source OS for the Internet of Things},
+  month = may,
+  year = {2013},
+  url = {http://www.contiki-os.org/}
+}
+
+@online{erbium,
+  author = {Matthias Kovatsch, ETH Zürich},
+  title = {Erbium (Er) REST Engine and CoAP Implementation for Contiki},
+  month = may,
+  year = {2013},
+  url = {http://people.inf.ethz.ch/mkovatsc/erbium.php}
+}
+
+@online{libcoap,
+  author = {Olaf Bergmann},
+  title = {libcoap: C-Implementation of CoAP },
+  month = may,
+  year = {2013},
+  url = {http://libcoap.sourceforge.net/}
+}
+
+@misc{rfc3610,
+  author="D. Whiting, Hifn and R. Housley, Vigil Security and N. Ferguson, MacFergus",
+  title="{Counter with CBC-MAC (CCM)}",
   series="Request for Comments",
-  number="4627",
-  howpublished="RFC 4627 (Proposed Standard)",
+  number="3610",
+  howpublished="RFC 3610 (Proposed Standard)",
   publisher="IETF",
   organization="Internet Engineering Task Force",
-  year=2006,
-  month=jul,
-  url="http://www.ietf.org/rfc/rfc4627.txt",
+  year=2003,
+  month=sep,
+  url="http://www.ietf.org/rfc/rfc3610.txt",
+}
+
+@misc{rfc5116,
+  author="D. McGrew, Cisco Systems, Inc.",
+  title="{An Interface and Algorithms for Authenticated Encryption}",
+  series="Request for Comments",
+  number="5116",
+  howpublished="RFC 5116 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=jan,
+  url="http://www.ietf.org/rfc/rfc5116.txt",
 }
 
 @misc{rfc5246,
-  author="T. Dierks and Independent and E. Rescorla and RTFM, Inc.",
+  author="T. Dierks, Independent and E. Rescorla, RTFM, Inc.",
   title="{The Transport Layer Security (TLS) Protocol Version 1.2}",
   series="Request for Comments",
   number="5246",
@@ -25,7 +78,7 @@
 }
 
 @misc{rfc6347,
-  author="E. Rescorla and RTFM, Inc. and N. Modadugu and Google, Inc.",
+  author="E. Rescorla, RTFM Inc. and N. Modadugu, Google Inc.",
   title="{Datagram Transport Layer Security Version 1.2}",
   series="Request for Comments",
   number="6347",
@@ -50,10 +103,22 @@
   url="http://www.ietf.org/rfc/rfc6690.txt",
 }
 
+@misc{draftaesecc,
+  author="D. McGrew, Cisco Systems and D. Bailey, RSA/EMC and M. Campagna, Certicom Corp and R. Dugal, Certicom Corp",
+  title="{AES-CCM ECC Cipher Suites for TLS}",
+  series="Request for Comments (work in progress)",
+  howpublished="Internet-Draft",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2011,
+  month=oct,
+  url="http://tools.ietf.org/html/draft-mcgrew-tls-aes-ccm-ecc-02",
+}
+
 @misc{draftcoap,
-  author="Z. Shelby and Sensinode and K. Hartke and C. Bormann and Universitaet Bremen TZI",
+  author="Z. Shelby, Sensinode and K. Hartke, Universitaet Bremen TZI and C. Bormann, Universitaet Bremen TZI",
   title="{Constrained Application Protocol (CoAP)}",
-  series="Request for Comments",
+  series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
   publisher="IETF",
   organization="Internet Engineering Task Force",
@@ -63,9 +128,9 @@
 }
 
 @misc{draftcodtls,
-  author="K. Hartke and O. Bergmann and Universitaet Bremen TZI",
+  author="K. Hartke, Universitaet Bremen TZI and O. Bergmann, Universitaet Bremen TZI",
   title="{Datagram Transport Layer Security in Constrained Environments}",
-  series="Request for Comments",
+  series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
   publisher="IETF",
   organization="Internet Engineering Task Force",
@@ -77,7 +142,7 @@
 @misc{draftmintls,
   author="H. Tschofenig, Nokia Siemens Networks and J. Gilger, RWTH Aachen University and M. Kovatsch, ETH Zurich",
   title="{A Hitchhiker's Guide to the (Datagram) Transport Layer Security Protocol for Smart Objects and Constrained Node Networks}",
-  series="Request for Comments",
+  series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
   publisher="IETF",
   organization="Internet Engineering Task Force",
