--- a/expose.tex
+++ b/expose.tex
@@ -45,7 +45,7 @@ IP-Fragmentierung, was aber bei Verlust einzelner Pakete zu einem neuen Versand 
 der einen hohen Energieverbauch mit sich bringt. Ein weiterer Ansatz besteht darin, die Menge der Daten sowohl beim Verbindungsaufbau als auch
 bei der Datenübertragung durch Komprimierung der Headerdaten zu verringern wofür es unterschiedliche Vorschläge gibt. Bei Nutzung von CoAP wäre
 es auch möglich, den Verbindungsaufbau über CoAP zu realisieren. Dadurch ist die Transportsicherung gegeben und große Pakete könnten mit einer
-blockweise Übertragung effizient übertragen werden, so dass bei Paketverlusten nur die verloren erneut übertragen werden müssten.
+blockweise Übertragung effizient übertragen werden, so dass bei Paketverlusten nur die Verlorenen erneut übertragen werden müssten.
 
 Beachtet werden müssen auch die Zeiten, nach denen ein Paket als verloren angesehen und erneut gesendet wird. Gerade beim Verbindungsaufbau
 kann es durch aufwendige Berechnungen zu einer erhöhten Antwortzeit kommen, was nicht zu einem erneuten Paketversand führen sollte.
@@ -57,9 +57,8 @@ bevor Anwendungsdaten ausgetauscht werden, damit diese dann sofort übertragen w
 Um Speicher zu sparen müssen auch die Anzahl der sicheren Verbindungen begrenzt werden und/oder Verbindungen nach einiger Zeit
 automatisch geschlossen werden um neue Verbindungen zu ermöglichen.
 
-
 \section{Umfeld/Vorgehensweise}
-Im Vordergrund soll die Implementierung eines Sicherheitsprotokolls stehen, welches sich an den Prinzipien von (D)TLS orientiert
+Im Vordergrund soll die Implementierung eines Sicherheitsprotokolls stehen, welches sich an den Prinzipien von DTLS orientiert
 und einige der Vorschläge aus dem Internet-Entwurf von K. Hartke und O. Bergmann, und/oder eigene Ideen, realisiert.
 Die Implementierung wird im Anschluss durch einen Vergleich mit DTLS evaluiert, wobei folgende Punkte eine Rolle spielen sollen:
 Volumen des generierten Traffics, Größe/Komplexität des Quellcodes und die vom Protokoll benötigte Speichermenge.
@@ -70,12 +69,12 @@ Mikrocontroller \cite{mc1322x} optimiert werden soll. Da der genannte Mikrocontr
 in Hardware unterstützt und die Rechenleistung sowie der Speicher beschränkt ist, soll nur ein Cipher Suite "`TLS\_ECDH\_anon\_WITH\_AES\_128\_CCM"',
 in Anlehnung an einen Internet-Entwurf \cite{draftaesecc}, realisiert werden. Dieses gibt einen Schlüsselaustausch mit Hilfe elliptischer
 Kurven vor, welche mit kleineren Zahlen genau so sicher sind wie ein standard Diffie-Hellman-Schlüsselaustausch und sich somit effizient berechnen
-lassen. Der Verschlüsselung der Anwendungsdaten erfolgt dann im "`Authenticated Encryption with Associated Data (AEAD)"' Modus \cite{rfc5116}
+lassen. Die Verschlüsselung der Anwendungsdaten erfolgt dann im "`Authenticated Encryption with Associated Data (AEAD)"' Modus \cite{rfc5116}
 wobei sich hier "`Counter with CBC-MAC (CCM)"' \cite{rfc3610} aufgrund der Hardwarevorraussetzungen am besten eignet. Dieser besteht
 aus einer Verschlüsselung der Daten durch AES im CTR-Modus während die dazugehörende MAC durch AES im CBC-Modus berechnet wird.
 Die Anzahl der möglichen sicheren Verbindungen soll beschränkt werden, um den Speicherverbrauch gering zu halten.
 Die dafür notwendigen verbindungsspezifischen Daten wie bspw. der Master-Schlüssel sollen dabei im Flash-Speicher des Redbee Econotags
-abgelegt werden, so dass sie nur die für das aktuelle Paket benötigten Daten im RAM-Specher befinden. Auf diese Weise lässt sich
+abgelegt werden, so dass nur die für das aktuelle Paket benötigten Daten im RAM-Speicher befinden. Auf diese Weise lässt sich
 die Anzahl der möglichen sicheren Verbindungen trotz Beschränkung maximieren.
 
 Bei der Evaluation soll die Datenmenge der Header-Daten sowohl beim Verbindungsaufbau als auch bei der Übertragung von Anwendungsdaten
@@ -85,7 +84,7 @@ Ebenso soll die Größe/Komplexität des zugrunde liegenden Quellcodes bewertet 
 
 \section{Ziel}
 Ziel soll es sein DTLS als geeignetes Sicherheitsprotokoll auch für eingeschränkten Umgebungen zu bestätigen oder geeignete Alternativen
-aufzuweisen welche nachweislich die gleichen Sicherheitsmerkmale aufweisen wie DTLS was sich über Jahre hinweg bewährt hat.
+aufzuweisen welche nachweislich die gleichen Sicherheitsmerkmale aufweisen wie DTLS, was sich über Jahre hinweg bewährt hat.
 
 \section{Zeitplanung}
 \begin{description}
