--- a/expose.tex
+++ b/expose.tex
@@ -86,7 +86,7 @@ Volumen des generierten Traffics, Größe/Komplexität des Quellcodes und die vo
 Die Implementierung besteht aus dem Clienten auf einem gängigen PC/Laptop, bei dem es keine speziellen Einschränkungen an Energie,
 Speicher oder Effizienz gibt, und aus dem Server welcher für einen Redbee Econotag \cite{econotag} mit dem MC1322X
 Mikrocontroller \cite{mc1322x} optimiert werden soll. Da der genannte Mikrocontroller die AES-Verschlüsselung im CTR- und CBC-Mode
-in Hardware unterstützt und die Rechenleistung sowie der Speicher beschränkt ist, soll nur ein Cipher Suite "`TLS\_ECDH\_anon\_WITH\_AES\_128\_CCM"',
+in Hardware unterstützt und die Rechenleistung sowie der Speicher beschränkt ist, soll nur ein Cipher Suite "`TLS\_ECDH\_anon\_WITH\_AES\_128\_CCM_8"',
 in Anlehnung an einen Internet-Entwurf \cite{draftaesecc}, realisiert werden. Dieses gibt einen Schlüsselaustausch mit Hilfe elliptischer
 Kurven vor, welche mit kleineren Zahlen genau so sicher sind wie ein standard Diffie-Hellman-Schlüsselaustausch und sich somit effizient berechnen
 lassen. Die Verschlüsselung der Anwendungsdaten erfolgt dann im "`Authenticated Encryption with Associated Data (AEAD)"' Modus \cite{rfc5116}
