--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,19 @@
   url="http://www.ietf.org/rfc/rfc3610.txt",
 }
 
+@misc{rfc4492,
+  author="S. Blake-Wilson, SafeNet and N. Bolyard, Sun Microsystems and V. Gupta, Sun Labs and C. Hawk, Corriente and B. Moeller, Ruhr-Uni Bochum",
+  title="{Elliptic Curve Cryptography (ECC) Cipher Suites for Transport Layer Security (TLS)}",
+  series="Request for Comments",
+  number="4492",
+  howpublished="RFC 4492 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2006,
+  month=may,
+  url="http://www.ietf.org/rfc/rfc4492.txt",
+}
+
 @misc{rfc5116,
   author="D. McGrew, Cisco Systems, Inc.",
   title="{An Interface and Algorithms for Authenticated Encryption}",
