--- a/expose/expose.tex
+++ b/expose/expose.tex
@@ -70,11 +70,11 @@ bevor Anwendungsdaten ausgetauscht werden, damit diese dann sofort übertragen w
 Um Speicher zu sparen müssen auch die Anzahl der sicheren Verbindungen begrenzt werden und/oder Verbindungen nach einiger Zeit
 automatisch geschlossen werden um neue Verbindungen zu ermöglichen.
 
-\subsection{A Hitchhiker's Guide to the (Datagram) Transport Layer Security Protocol}
-todo \cite{draftmintls}
+% \subsection{A Hitchhiker's Guide to the (Datagram) Transport Layer Security Protocol}
+% todo \cite{draftmintls}
 
-\subsection{Generic Header Compression}
-todo
+% \subsection{Generic Header Compression}
+% todo
 
 \section{Umfeld/Vorgehensweise}
 Im Vordergrund soll die Implementierung eines Sicherheitsprotokolls stehen, welches sich an den Prinzipien von DTLS orientiert
@@ -108,15 +108,16 @@ aufzuzeigen die die gleichen Sicherheitsmerkmale aufweisen wie DTLS, was sich ü
 
 \section{Zeitplanung}
 \begin{description}
-  \item[31.05.2013] Fertigstellung des Exposé
-  \item[07.06.2013] Fertigstellung der Infrastruktur:
+  \item[bis 31.05.2013] Fertigstellung des Exposé
+  \item[bis 07.06.2013] Fertigstellung der Infrastruktur:
     \begin{itemize}
       \item Firmware für Econotag mit Contiki \cite{contiki}, Erbium \cite{erbium} und Flashspeichermanagement aus GOBI
       \item Programm mit LibCoap \cite{libcoap} von O. Bergmann zur Kommunikation mit dem Econotag
     \end{itemize}
-  \item[28.06.2013] Fertigstellung einer DTLS ähnlichen Implementierung über CoAP
-  \item[05.07.2013] Fertigstellung Vergleich von DTLS und eigener Implemtierung
-  \item[26.07.2013] Fertigstellung Bachelorarbeit
+  \item[bis 17.07.2013] Fertigstellung einer DTLS ähnlichen Implementierung über CoAP
+  \item[bis 26.07.2013] Optimierung mit Headercompression
+  \item[bis 09.08.2013] Evaluation der Implemtierung gegenüber DTLS
+  \item[bis 23.08.2013] Fertigstellung Bachelorarbeit
 \end{description}
 
 %\cite{rfc4627}
