--- a/expose/expose.tex
+++ b/expose/expose.tex
@@ -7,7 +7,7 @@
 \bibliography{bibliography.bib}
 
 % Title Page
-\title{Exposé}
+\title{Exposé zur Bachelorarbeit mit dem Titel:\newline\newline Anpassungen von DTLS zur sicheren Kommunikation in eingeschränkten Umgebungen\newline\newline Adjustments of DTLS for secure communication in restricted environments}
 \author{Lars Schmertmann}
 
 \begin{document}
