--- a/expose/expose.tex
+++ b/expose/expose.tex
@@ -3,6 +3,7 @@
 \usepackage[ngerman]{babel}
 \usepackage[babel,german=quotes]{csquotes} 
 \usepackage{biblatex}
+\usepackage{hyperref}
 
 \bibliography{bibliography.bib}
 
