--- a/expose/bibliography.bib
+++ b/expose/bibliography.bib
@@ -65,7 +65,7 @@
 }
 
 @misc{rfc5116,
-  author="D. McGrew, Cisco Systems, Inc.",
+  author="D. McGrew",
   title="{An Interface and Algorithms for Authenticated Encryption}",
   series="Request for Comments",
   number="5116",
@@ -78,7 +78,7 @@
 }
 
 @misc{rfc5246,
-  author="T. Dierks, Independent and E. Rescorla, RTFM, Inc.",
+  author="T. Dierks and E. Rescorla",
   title="{The Transport Layer Security (TLS) Protocol Version 1.2}",
   series="Request for Comments",
   number="5246",
@@ -104,7 +104,7 @@
 }
 
 @misc{rfc6690,
-  author="Z. Shelby, Sensinode",
+  author="Z. Shelby",
   title="{Constrained RESTful Environments (CoRE) Link Format}",
   series="Request for Comments",
   number="6690",
@@ -117,7 +117,7 @@
 }
 
 @misc{draftaesecc,
-  author="D. McGrew, Cisco Systems and D. Bailey, RSA/EMC and M. Campagna, Certicom Corp and R. Dugal, Certicom Corp",
+  author="D. McGrew and D. Bailey, RSA/EMC and M. Campagna, Certicom Corp and R. Dugal, Certicom Corp",
   title="{AES-CCM ECC Cipher Suites for TLS}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -129,7 +129,7 @@
 }
 
 @misc{draftcoap,
-  author="Z. Shelby, Sensinode and K. Hartke, Universitaet Bremen TZI and C. Bormann, Universitaet Bremen TZI",
+  author="Z. Shelby and K. Hartke, Universitaet Bremen TZI and C. Bormann, Universitaet Bremen TZI",
   title="{Constrained Application Protocol (CoAP)}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
@@ -153,13 +153,21 @@
 }
 
 @misc{draftmintls,
-  author="H. Tschofenig, Nokia Siemens Networks and J. Gilger, RWTH Aachen University and M. Kovatsch, ETH Zurich",
+  author="H. Tschofenig, Nokia Siemens Networks and S.S. Kumar, Philips Research and S. Keoh, Philips Research",
   title="{A Hitchhiker's Guide to the (Datagram) Transport Layer Security Protocol for Smart Objects and Constrained Node Networks}",
   series="Request for Comments (work in progress)",
   howpublished="Internet-Draft",
   publisher="IETF",
   organization="Internet Engineering Task Force",
   year=2013,
-  month=feb,
-  url="http://tools.ietf.org/html/draft-tschofenig-lwig-tls-minimal-02",
+  month=jul,
+  url="http://tools.ietf.org/html/draft-tschofenig-lwig-tls-minimal-03",
 }
+
+http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml
+
+http://tools.ietf.org/html/rfc5487
+
+http://tools.ietf.org/html/rfc4279
+
+
