--- a/thesis/abbreviations.de.tex
+++ b/thesis/abbreviations.de.tex
@@ -1,4 +1,4 @@
-\def\diplomaname{Diplomarbeit}
+\def\diplomaname{Bachelorarbeit}
 \def\abstractname{Zusammenfassung}
 \def\examinername{1. Gutachter}
 \def\supervisorname{2. Gutachter}
