--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -13,9 +13,9 @@
 \institute{Universität Bremen}
 \department{Fachbereich 3: Mathematik und Informatik}
 
-\examiner{Prof.\,Dr.\,habil. Hans Mustermann}
-\supervisor{Prof.\,Dr.\,rer.\,nat.\,Dr.-Ing. Frida Muster}
-\advisor{Dipl.-Math. Sabine Musterfrau}
+\examiner{Prof.\,Dr.-Ing. Carsten Bormann}
+\supervisor{Dr.-Ing. Olaf Bergmann}
+\advisor{Dr.-Ing. Olaf Bergmann}
 
 
 %%% DOCUMENT SETTINGS
