--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,6 +1,6 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
-\documentclass[english]{thesis}
+\documentclass[ngerman]{thesis}
 
 \usepackage{blindtext}
 
