--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -49,8 +49,8 @@
 \addcontentsline{toc}{section}{\contentsname}
 \tableofcontents
 
-%\clearpage
-%\listoftodos
+\clearpage
+\listoftodos
 
 \cleardoublepage
 \mainmatter
