--- a/report/appendices/lists.tex
+++ b/report/appendices/lists.tex
@@ -1,5 +1,5 @@
 \listoffigures
 \listoftables
 \printbibliography
-\printglossary[style=thesisacr,type=acronym,title=\abbreviationsname]
-\printglossary[style=thesis,type=main,title=\glossaryname]
+\printglossary[style=reportacr,type=acronym,title=\abbreviationsname]
+\printglossary[style=report,type=main,title=\glossaryname]
