--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -1,3 +1,34 @@
+
+\newacronym{acr:ssl}{SSL}{Secure Sockets Layer}
+
+\newacronym{acr:tls}{TLS}{Transport Layer Security}
+
+\newacronym{acr:dtls}{DTLS}{Datagram Transport Layer Security}
+
+\newacronym{acr:ietf}{IETF}{Internet Engineering Task Force}
+
+\newacronym{acr:tcp}{TCP}{Transmission Control Protocol}
+
+\newacronym{acr:udp}{UDP}{User Datagram Protocol}
+
+\newacronym{acr:coap}{CoAP}{Constrained Application Protocol}
+
+\newacronym{acr:wot}{WoT}{Web of Things}
+
+\newacronym{acr:6lowpan}{6LoWPAN}{IPv6 over Low power Wireless Personal Area Network}
+
+\newacronym{acr:rom}{ROM}{Read-Only Memory}
+
+\newacronym{acr:ram}{RAM}{Random-Access Memory}
+
+\newacronym{acr:ccm}{CCM}{Counter with CBC-MAC}
+
+\newacronym{acr:aead}{AEAD}{Authenticated Encryption with Associated Data}
+
+\newacronym{acr:mac}{MAC}{Message Authentication Code}
+
+\newacronym{acr:aes}{AES}{Advanced Encryption Standard}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
