--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -1,5 +1,26 @@
+
+\newglossaryentry{glos:handshake}{
+  name={Handshake},
+  description={Beschreibt die Aushandlung von Sicherheitsparametern um eine sichere Verbindung herzustellen}
+}
+
+\newglossaryentry{glos:ciphersuit}{
+  name={Ciphersuit},
+  description={Gruppe aus 4 Algorithmen, die für Schlüsselaustausch, Authentifizierung, Hash und Verschlüsselung verwendet werden}
+}
+
+\newglossaryentry{glos:fragmentierung}{
+  name={Fragmentierung},
+  description={Beschreibt die Aufteilung eines Ganzen in kleinere Teile}
+}
+
+\newglossaryentry{glos:fragment}{
+  name={Fragment},
+  plural={Fragmente},
+  description={Beschreibt einen Teil eines Ganzen}
+}
+
 % \newglossaryentry{label}{
 %   name={name},
 %   description={long description}
 % }
-
