--- a/report/appendices/lists.tex
+++ b/report/appendices/lists.tex
@@ -2,4 +2,4 @@
 \listoftables
 \printbibliography
 \printglossary[style=reportacr,type=acronym,title=\abbreviationsname]
-\printglossary[style=report,type=main,title=\glossaryname]
+\printglossary[style=report,type=main,title=Glossar] % \glossaryname
