--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -48,7 +48,7 @@
   organization="Internet Engineering Task Force",
   year=2003,
   month=sep,
-  url="http://www.ietf.org/rfc/rfc3610.txt",
+  url="http://tools.ietf.org/html/rfc3610",
 }
 
 @misc{rfc4492,
@@ -61,7 +61,7 @@
   organization="Internet Engineering Task Force",
   year=2006,
   month=may,
-  url="http://www.ietf.org/rfc/rfc4492.txt",
+  url="http://tools.ietf.org/html/rfc4492",
 }
 
 @misc{rfc5116,
@@ -74,7 +74,7 @@
   organization="Internet Engineering Task Force",
   year=2008,
   month=jan,
-  url="http://www.ietf.org/rfc/rfc5116.txt",
+  url="http://tools.ietf.org/html/rfc5116",
 }
 
 @misc{rfc5246,
@@ -87,7 +87,7 @@
   organization="Internet Engineering Task Force",
   year=2008,
   month=aug,
-  url="http://www.ietf.org/rfc/rfc5246.txt",
+  url="http://tools.ietf.org/html/rfc5246",
 }
 
 @misc{rfc6347,
@@ -100,7 +100,7 @@
   organization="Internet Engineering Task Force",
   year=2012,
   month=jan,
-  url="http://www.ietf.org/rfc/rfc6347.txt",
+  url="http://tools.ietf.org/html/rfc6347",
 }
 
 @misc{rfc6690,
@@ -113,7 +113,7 @@
   organization="Internet Engineering Task Force",
   year=2012,
   month=aug,
-  url="http://www.ietf.org/rfc/rfc6690.txt",
+  url="http://tools.ietf.org/html/rfc6690",
 }
 
 @misc{draftaesecc,
@@ -125,7 +125,7 @@
   organization="Internet Engineering Task Force",
   year=2011,
   month=oct,
-  url="http://tools.ietf.org/html/draft-mcgrew-tls-aes-ccm-ecc-02",
+  url="http://tools.ietf.org/html/draft-mcgrew-tls-aes-ccm-ecc-06",
 }
 
 @misc{draftcoap,
@@ -166,8 +166,10 @@
 
 http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml
 
-http://tools.ietf.org/html/rfc5487
+Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
 
-http://tools.ietf.org/html/rfc4279
+AES-CCM Cipher Suites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc6655
+
+Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
 
 
