--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -29,6 +29,8 @@
 
 \newacronym{acr:aes}{AES}{Advanced Encryption Standard}
 
+\newacronym{acr:dos}{DoS}{Denial of Service}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
