--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -103,6 +103,19 @@
   url="http://tools.ietf.org/html/rfc6347",
 }
 
+@misc{rfc6655,
+  author="D. McGrew and D. Bailey, RSA Security Division of EMC",
+  title="{AES-CCM Cipher Suites for Transport Layer Security (TLS)}",
+  series="Request for Comments",
+  number="6655",
+  howpublished="RFC 6655 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2012,
+  month=jul,
+  url="http://tools.ietf.org/html/rfc6655",
+}
+
 @misc{rfc6690,
   author="Z. Shelby",
   title="{Constrained RESTful Environments (CoRE) Link Format}",
@@ -167,8 +180,6 @@
 http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml
 
 Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
-
-AES-CCM Cipher Suites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc6655
 
 Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
 
