--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -31,6 +31,8 @@
 
 \newacronym{acr:dos}{DoS}{Denial of Service}
 
+\newacronym{acr:psk}{PSK}{Pre-Shared Key}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
