--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -38,6 +38,14 @@
   url = {http://libcoap.sourceforge.net/}
 }
 
+@online{tlsparams,
+  author="Internet Assigned Numbers Authority (IANA)",
+  title="{Transport Layer Security (TLS) Parameters}",
+  year=2013,
+  month=jul,
+  url="http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml",
+}
+
 @misc{rfc3610,
   author="D. Whiting, Hifn and R. Housley, Vigil Security and N. Ferguson, MacFergus",
   title="{Counter with CBC-MAC (CCM)}",
@@ -49,6 +57,19 @@
   year=2003,
   month=sep,
   url="http://tools.ietf.org/html/rfc3610",
+}
+
+@misc{rfc4279,
+  author="P. Eronen, Nokia and H. Tschofenig, Siemens",
+  title="{Pre-Shared Key Ciphersuites for Transport Layer Security (TLS)}",
+  series="Request for Comments",
+  number="4279",
+  howpublished="RFC 4279 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2005,
+  month=dez,
+  url="http://tools.ietf.org/html/rfc4279",
 }
 
 @misc{rfc4492,
@@ -176,11 +197,3 @@
   month=jul,
   url="http://tools.ietf.org/html/draft-tschofenig-lwig-tls-minimal-03",
 }
-
-http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml
-
-Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
-
-Pre-Shared Key Ciphersuites for Transport Layer Security (TLS): http://tools.ietf.org/html/rfc4279
-
-
