--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -35,7 +35,7 @@
   title = {libcoap: C-Implementation of CoAP },
   month = may,
   year = {2013},
-  url = {http://libcoap.sourceforge.net/}
+  url = {http://libcoap.sourceforge.net}
 }
 
 @online{tlsparams,
@@ -197,3 +197,7 @@
   month=jul,
   url="http://tools.ietf.org/html/draft-tschofenig-lwig-tls-minimal-03",
 }
+
+CCM von NIST -> http://csrc.nist.gov/publications/nistpubs/800-38C/SP800-38C.pdf
+
+CCM Sicher ? -> http://csrc.nist.gov/groups/ST/toolkit/BCM/documents/proposedmodes/ccm/ccm-ad1.pdf
