--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -6,6 +6,7 @@
 
 \newglossaryentry{glos:ciphersuit}{
   name={Ciphersuit},
+  plural={Ciphersuits},
   description={Gruppe aus 4 Algorithmen, die für Schlüsselaustausch, Authentifizierung, Hash und Verschlüsselung verwendet werden}
 }
 
