--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -46,6 +46,14 @@
   url="http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml",
 }
 
+@online{portnumbers,
+  author="Internet Assigned Numbers Authority (IANA)",
+  title="{Service Name and Transport Protocol Port Number Registry}",
+  year=2013,
+  month=aug,
+  url="http://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml",
+}
+
 @misc{rfc3610,
   author="D. Whiting, Hifn and R. Housley, Vigil Security and N. Ferguson, MacFergus",
   title="{Counter with CBC-MAC (CCM)}",
