--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -161,8 +161,16 @@
 \end{frame}
 
 \begin{frame}{Hardware}
-Redbee Econotag
-AES-Hardware
+  \begin{itemize}
+    \item Econotag: mc13224v Development-Board
+    \begin{itemize}
+      \item Freescale MC13224v ARM7TDMI-S Microcontroller
+      \item 802.15.4 Funkstandard
+      \item AES Hardware-Engine
+      \item 128 KiB Flash-Speicher
+      \item 96 KiB RAM
+    \end{itemize}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Geeignetes Ciphersuit}
@@ -180,6 +188,8 @@ AES-Hardware
   \end{itemize}
   Größe des Binärcodes:
   \begin{itemize}
+    \item Nutzung der AES-Hardware für CCM: 628 Byte
+    \item Einsparung durch AES in Hardware: 7KiB
     \item Für HMAC und ECC jeweils knapp 3KiB
   \end{itemize}
 \end{frame}
