--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -33,6 +33,10 @@
 
 \newacronym{acr:psk}{PSK}{Pre-Shared Key}
 
+\newacronym{acr:ack}{ACK}{Acknowledgement}
+
+\newacronym{acr:uri}{URI}{Uniform Resource Identifier}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
