--- a/report/settings.tex
+++ b/report/settings.tex
@@ -20,8 +20,10 @@
 
 %%% DOCUMENT SETTINGS
 
-% uncomment for 1.5-linespacing
+% --- linespacing ---
+% \singlespacing
 \onehalfspacing
+% \doublespacing
 
 \makeatother
 \endinput
