--- a/blaster/README
+++ b/blaster/README
@@ -1,7 +1,7 @@
 ./blaster <MAC-Endnummer> [-t] < EINGABEDATEI > AUSGABEDATEI
 
 Fügt die MAC-Adresse mit Hilfe der MAC-Endnummer in die Firmware ein.
-Bei -t als 2. Param wird der Standardpin "11111111" gesetzt.
+Bei -t als 2. Param wird der Standardpsk "1111111111111111" gesetzt.
 Außerdem wird eine UUID generiert.
 
 Die EINGABEDATEI ist die kompilierte .bin Firmware Datei.
