Blocksize für Antwort auch auf 32 Byte reduziert. COAP_MAX_OPEN_TRANSACTIONS von 4 auf 6 erhöht um 2.01 Created Blöcke senden zu können.

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -54,6 +54,19 @@
   url="http://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml",
 }
 
+@misc{ieee802154,
+  author="LAN/MAN Standards Committee and IEEE Computer Society",
+  title="{Low-Rate Wireless Personal Area Networks (LR-WPANs)}",
+  series="IEEE Standard for Local and metropolitan area networks",
+  number="802.15.4",
+  howpublished="IEEE 802.15.4-2011",
+  publisher="IEEE-SA",
+  organization="IEEE Standards Assocoation",
+  year=2011,
+  month=jun,
+  url="http://standards.ieee.org/getieee802/download/802.15.4-2011.pdf",
+}
+
 @misc{rfc3610,
   author="D. Whiting, Hifn and R. Housley, Vigil Security and N. Ferguson, MacFergus",
   title="{Counter with CBC-MAC (CCM)}",
@@ -178,8 +191,20 @@
   publisher="IETF",
   organization="Internet Engineering Task Force",
   year=2013,
-  month=nov,
+  month=jun,
   url="http://datatracker.ietf.org/doc/draft-ietf-core-coap",
+}
+
+@misc{draftcoapblock,
+  author="C. Bormann, Universitaet Bremen TZI and Z. Shelby",
+  title="{Blockwise transfers in CoAP}",
+  series="Request for Comments (work in progress)",
+  howpublished="Internet-Draft",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2013,
+  month=jun,
+  url="http://tools.ietf.org/html/draft-ietf-core-block",
 }
 
 @misc{draftcodtls,
