Endlich Kapitel "Definition des Ciphersuits" angefangen

--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -37,6 +37,10 @@
 
 \newacronym{acr:uri}{URI}{Uniform Resource Identifier}
 
+\newacronym{acr:sha}{SHA}{Secure Hash Algorithm}
+
+\newacronym{acr:psr}{PSR}{Pseudo-Random-Funktion}
+
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
 % 
