--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -21,6 +21,11 @@
   description={Beschreibt einen Teil eines Ganzen}
 }
 
+\newglossaryentry{glos:rsa}{
+  name={RSA-Verfahren},
+  description={Asymmetrisches kryptographisches Verfahren zur Verschlüsselung und Signatur, das nach seinen Erfindern Rivest, Shamir und Adleman benannt ist}
+}
+
 % \newglossaryentry{label}{
 %   name={name},
 %   description={long description}
