Kapitel "Definition des Ciphersuits" gefüllt.

--- a/report/acronyms.tex
+++ b/report/acronyms.tex
@@ -7,6 +7,8 @@
 
 \newacronym{acr:ietf}{IETF}{Internet Engineering Task Force}
 
+\newacronym{acr:nist}{NIST}{National Institute of Standards and Technology}
+
 \newacronym{acr:tcp}{TCP}{Transmission Control Protocol}
 
 \newacronym{acr:udp}{UDP}{User Datagram Protocol}
@@ -40,6 +42,14 @@
 \newacronym{acr:sha}{SHA}{Secure Hash Algorithm}
 
 \newacronym{acr:psr}{PSR}{Pseudo-Random-Funktion}
+
+\newacronym{acr:hmac}{HMAC}{Keyed-Hashing for Message Authentication}
+
+\newacronym{acr:ecc}{ECC}{Elliptic Curve Cryptography}
+
+\newacronym{acr:ctr}{CTR}{Counter}
+
+\newacronym{acr:cbc}{CBC}{Cipher Block Chain}
 
 % \newacronym{label}{kurz}{lang}
 % Zugriff via \gls{label} und Co.
