--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -80,6 +80,19 @@
   url="http://tools.ietf.org/html/rfc3610",
 }
 
+@misc{nsp3610,
+  author="National Institute of Standards and Technology (NIST)",
+  title="{Recommendation for Block Cipher Modes of Operation: The CCM Mode for Authentication and Confidentiality}",
+  series="NIST Sepcial Publication",
+  number="800-38C",
+  howpublished="NSP 800-38C",
+  publisher="NIST",
+  organization="National Institute of Standards and Technology",
+  year=2004,
+  month=may,
+  url="http://csrc.nist.gov/publications/nistpubs/800-38C/SP800-38C.pdf",
+}
+
 @misc{rfc4279,
   author="P. Eronen, Nokia and H. Tschofenig, Siemens",
   title="{Pre-Shared Key Ciphersuites for Transport Layer Security (TLS)}",
